syntax = "proto3";

package com.ytone.longcare.models.protos;

option java_package = "com.ytone.longcare.models.protos";
option java_multiple_files = true;

// Request Models

// 获取本月用户的服务记录情况 请求参数
message UserOrderParam {
  int32 user_id = 1; // 老人用户Id
}

// 开始服务工单参数
message StartOrderParam {
  int64 order_id = 1; // 订单Id
  string nfc = 2; // nfc设备号
}

// 发送短信验证码
message SendSmsCodeParam {
  string mobile = 1; // 手机号
  int32 code_type = 2; // 验证码类型 1:登录
}

// 按天查询服务订单的请求参数模型
message OrderListParam {
  string daytime = 1; // 查询日期，格式例如: "yyyy-MM-dd"
}

// 查询服务订单详情参数
message OrderInfoParam {
  int64 order_id = 1; // 查询的订单号
}

// 手机登录请求参数
message LoginPhoneParam {
  string mobile = 1; // 手机号码:纯号码不带86区号
  string sms_code = 2; // 短信验证码
  int32 user_identity = 3; // 身份1护理员
}

// 登录日志模型
message LoginLogParam {
  string phone_system = 1; // 手机系统
  string phone_version = 2; // 手机系统版本
  string network_type = 3; // 网络类型
  string network_operator = 4; // 网络运营商
}

// 结束服务工单参数
message EndOrderParam {
  int64 order_id = 1; // 订单Id
  string nfc = 2; // nfc设备号
  repeated int32 project_id_list = 3; // 完成的服务项目Id集合
  repeated string begin_img_list = 4; // 开始图片集合
  repeated string end_img_list = 5; // 结束图片集合
}

// 定位参数信息
message AddPositionParam {
  int64 order_id = 1; // 订单号
  double longitude = 2; // 经度
  double latitude = 3; // 纬度
}

// Response Models

// 用户信息
message UserInfo {
  int32 user_id = 1; // 用户Id
  string name = 2; // 老人姓名
  string identity_card_number = 3; // 身份证号码
  int32 age = 4; // 年龄
  string gender = 5; // 性别
  string address = 6; // 居住地址
  string last_service_time = 7; // 最后服务时间
  int32 month_service_time = 8; // 本月已服务时间
  int32 month_no_service_time = 9; // 本月未服务时间
}

// 文件上传token
message UploadTokenResult {
  string tmp_secret_id = 1;
  string tmp_secret_key = 2;
  string session_token = 3;
  string start_time = 4;
  string request_id = 5;
  string expiration = 6;
  string expired_time = 7;
  string bucket = 8;
  string region = 9;
}

// 今天的服务订单
message TodayServiceOrder {
  int64 order_id = 1; // 订单号
  int32 user_id = 2; // 用户Id
  string name = 3; // 姓名
  string call_phone = 4; // 老人联系电话
  string identity_card_number = 5; // 身份证号
  string live_address = 6; // 居住地址
  int32 state = 7; // 状态:0待执行 1执行中 2任务完成 3作废
  int32 plan_total_time = 8; // 中的服务时间
  int32 complete_total_time = 9; // 时间完成时间
  int32 total_service_time = 10; // 服务时长
}

// 系统相关配置
message SystemConfig {
  string tencent_map_key = 1; // 腾讯地图key
  int32 tencent_map_fence_radius = 2; // 腾讯地图围栏半径
  int32 tencent_map_upload_interval = 3; // 腾讯地图定位上传间隔时间（秒）
  int32 tencent_map_upload_distance = 4; // 腾讯地图定位上传距离（米）
}

// 服务订单数据模型
message ServiceOrder {
  int64 order_id = 1; // 订单号
  int32 user_id = 2; // 用户Id
  string name = 3; // 姓名
  string call_phone = 4; // 老人联系电话
  string identity_card_number = 5; // 身份证号
  string live_address = 6; // 居住地址
  int32 state = 7; // 状态:0待执行 1执行中 2任务完成 3作废
  int32 plan_total_time = 8; // 计划服务时间
  int32 complete_total_time = 9; // 时间完成时间
  int32 total_service_time = 10; // 服务时长
}

// 服务订单详情
message ServiceOrderInfo {
  int64 order_id = 1; // 服务单号
  int32 state = 2; // 服务状态
  UserInfoM user_info = 3; // 用户信息
  repeated ServiceProjectM project_list = 4; // 服务项目信息集合
}

// 用户信息 (嵌套在ServiceOrderInfo内)
message UserInfoM {
  int32 user_id = 1; // 用户Id
  string name = 2; // 老人姓名
  string identity_card_number = 3; // 身份证号码
  int32 age = 4; // 年龄
  string gender = 5; // 性别
  string address = 6; // 居住地址
  string last_service_time = 7; // 最后服务时间
  int32 month_service_time = 8; // 本月已服务时间
  int32 month_no_service_time = 9; // 本月未服务时间
}

// 服务项目信息 (嵌套在ServiceOrderInfo内)
message ServiceProjectM {
  int32 project_id = 1; // 服务项目ID
  string project_name = 2; // 服务项目名称
  int32 service_time = 3; // 服务时长 分钟
  string last_service_time = 4; // 最后服务的时间
}

// 本月服务统计信息
message NurseServiceTime {
  int32 have_service_time = 1; // 已服务时长
  int32 have_service_num = 2; // 已经服务的次数
  int32 no_service_time = 3; // 未服务时长
}

// 登录结果
message LoginResult {
  int32 company_id = 1; // 公司Id
  int32 account_id = 2; // 账号Id
  int32 user_id = 3; // 用户Id
  string user_name = 4; // 用户名字
  string head_url = 5; // 头像地址
  int32 user_identity = 6; // 用户身份 1护理员
  string identity_card_number = 7; // 身份证号码
  int32 gender = 8; // 性别 1男 0女
  string token = 9; // 用户身份token
}